# bronko

./: .gitignore  CHANGELOG  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: build.rs  call.rs  cli.rs  consts.rs  count.rs  io.rs  lcb.rs  main.rs  profile.rs  query.rs  util.rs
test_data/: HPV16.fa  hpv.bkdb
test_data/4_sarscov2/: OM223929.1.fasta  ON765678.1.fasta  PX392231.1.fasta  wuhan_ref.fasta
tests/: build_tests.rs
