[package]
name = "intrahost_variants"
version = "0.1.0"
edition = "2021"
authors = [
    "Ryan Doughty <rdd4@rice.edu>"
]
description = "Rapid Intrahost Variation Analyses Using Split K-mers"
readme = "README.md"
keywords = ["bioinformatics", "genomics", "sequencing", "k-mer", "viruses"]
categories = ["command-line-utilities", "science"]

[dependencies]
needletail = "0.6.0"
clap = { version = "4", features = ["derive"] }
log = "0"
simple_logger = "3"
